# igdm-sentiment-analysis

./: .gitignore  Cargo.toml  README.md
src/: analyzer.rs  main.rs  parser.rs  plotter.rs
