[package]
name = "igdm-sentiment-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.15", features = ["derive"] }
plotters = "0.3.6"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
vader_sentiment = "0.1.1"
walkdir = "2.5.0"
